Delete individual task.

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -32,6 +32,7 @@
         <ul>
             <li>{{name}}</li>
             <li>{{description}}</li>
+            <button><a href="/tasks/{{id}}/delete">X</a></button>
         </ul>
     {{/each}}
 {{/if}}
