--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -51,51 +51,52 @@
     {{/if}}
 
 
-<!--<div class="container">-->
-<!--    <h1 class="text-light">To Do</h1>-->
-<!--    <div class="list-group"><a class="list-group-item list-group-item-action flex-column align-items-start my-2" href="#" data-bs-target="#modal-1" data-bs-toggle="modal">-->
-<!--        <div class="d-flex w-100 justify-content-between">-->
-<!--            <h5 class="mb-1">Heading</h5><small>3 days ago</small>-->
-<!--        </div>-->
-<!--        <p class="mb-1">Paragraph</p><small class="text-muted">Text</small>-->
-<!--    </a>-->
-<!--        <form>-->
-<!--            <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">-->
-<!--                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">-->
-<!--                    <div class="modal-content">-->
-<!--                        <div class="modal-header">-->
-<!--                            <h4 class="modal-title">Edit Task</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--                        </div>-->
-<!--                        <div class="modal-body"><input class="form-control form-control-lg my-2" type="text" placeholder="Task name" name="taskName" required=""><input class="form-control form-control-lg my-2" type="text" placeholder="Task Description" name="taskDescription" required="">-->
-<!--                            <div class="form-check my-2"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Completed</label></div>-->
-<!--                        </div>-->
-<!--                        <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><button class="btn btn-primary" type="submit">Save</button></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </form><a class="list-group-item list-group-item-action flex-column align-items-start my-2" href="#" data-bs-target="#modal-2" data-bs-toggle="modal">-->
-<!--            <div class="d-flex w-100 justify-content-between">-->
-<!--                <h5 class="mb-1">Heading</h5><small>3 days ago</small>-->
-<!--            </div>-->
-<!--            <p class="mb-1">Paragraph</p><small class="text-muted">Text</small>-->
-<!--        </a>-->
-<!--        <form>-->
-<!--            <div class="modal fade" role="dialog" tabindex="-1" id="modal-2">-->
-<!--                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">-->
-<!--                    <div class="modal-content">-->
-<!--                        <div class="modal-header">-->
-<!--                            <h4 class="modal-title">Edit Task</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--                        </div>-->
-<!--                        <div class="modal-body"><input class="form-control form-control-lg my-2" type="text" placeholder="Task name" name="taskName" required=""><input class="form-control form-control-lg my-2" type="text" placeholder="Task Description" name="taskDescription" required="">-->
-<!--                            <div class="form-check my-2"><input class="form-check-input" type="checkbox" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Completed</label></div>-->
-<!--                        </div>-->
-<!--                        <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><button class="btn btn-primary" type="submit">Save</button></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </form>-->
-<!--    </div>-->
-<!--</div>-->
+<div class="container">
+    <h1 class="text-light">To Do</h1>
+    <div class="list-group"><a class="list-group-item list-group-item-action flex-column align-items-start my-2" href="#" data-bs-target="#modal-1" data-bs-toggle="modal">
+        <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Heading</h5><small>3 days ago</small>
+        </div>
+        <p class="mb-1">Paragraph</p><small class="text-muted">Text</small>
+    </a>
+        <form>
+            <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Edit Task</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body"><input class="form-control form-control-lg my-2" type="text" placeholder="Task name" name="taskName" required=""><input class="form-control form-control-lg my-2" type="text" placeholder="Task Description" name="taskDescription" required="">
+                            <div class="form-check my-2"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Completed</label></div>
+                        </div>
+                        <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><button class="btn btn-primary" type="submit">Save</button></div>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <a class="list-group-item list-group-item-action flex-column align-items-start my-2" href="#" data-bs-target="#modal-2" data-bs-toggle="modal">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Heading</h5><small>3 days ago</small>
+            </div>
+            <p class="mb-1">Paragraph</p><small class="text-muted">Text</small>
+        </a>
+        <form>
+            <div class="modal fade" role="dialog" tabindex="-1" id="modal-2">
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Edit Task</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body"><input class="form-control form-control-lg my-2" type="text" placeholder="Task name" name="taskName" required=""><input class="form-control form-control-lg my-2" type="text" placeholder="Task Description" name="taskDescription" required="">
+                            <div class="form-check my-2"><input class="form-check-input" type="checkbox" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Completed</label></div>
+                        </div>
+                        <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><button class="btn btn-primary" type="submit">Save</button></div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 <footer class="footer" style="background: rgba(0,0,0,0.8);">
     <div class="container"><span class="text-muted">Copyright (c) 2022 - To-Do-List</span></div>
 </footer>
