--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>To-Do-List</title>
-<!--    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">-->
-<!--    <link rel="stylesheet" href="assets/css/Navbar-Right-Links.css">-->
-<!--    <link rel="stylesheet" href="assets/css/simple-sticky-footer.css">-->
-<!--    <link rel="stylesheet" href="assets/css/styles.css">-->
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/Navbar-Right-Links.css">
+    <link rel="stylesheet" href="/assets/css/simple-sticky-footer.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
 <body>
