--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,75 +27,75 @@
         </div>
     </div>
 </nav>
-    <div class="container">
-        <h1 class="text-light">To Do</h1>
+<div class="container">
+    <h1 class="text-light">To Do</h1>
 
-        <div class="list-group">
-            {{#if tasks}}
-            {{#each tasks}}
-            <div class="list-group-item list-group-item-action flex-column align-items-start my-2">
-                <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">{{name}}</h5>
-                    <div><small class="me-2">3 days ago</small><a href="#" data-bs-target="#modal-3" data-bs-toggle="modal"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-trash text-danger">
-                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"></path>
-                        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"></path>
-                    </svg></a></div>
-                </div>
-                <p class="mb-1">{{description}}</p><a href="#" data-bs-target="#modal-1" data-bs-toggle="modal"><small class="text-muted">Edit</small></a>
+    <div class="list-group">
+        {{#if tasks}}
+        {{#each tasks}}
+        <div class="list-group-item list-group-item-action flex-column align-items-start my-2">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">{{name}}</h5>
+                <div><small class="me-2">3 days ago</small><a href="#" data-bs-target="#modal-3{{id}}" data-bs-toggle="modal"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-trash text-danger">
+                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"></path>
+                    <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"></path>
+                </svg></a></div>
             </div>
-            <form action="/tasks/{{id}}/edit" method="POST">
-                <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h4 class="modal-title">Edit Task</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <input class="form-control form-control-lg my-2" type="text" placeholder="Task name" name="name" value="{{name}}" required="">
-                                <input class="form-control form-control-lg my-2" type="text" placeholder="Task Description" name="details" value="{{description}}" required="">
-                                <div class="form-check my-2"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Completed</label></div>
-                            </div>
-                            <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><button class="btn btn-primary" type="submit">Save</button></div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-<!--            <form>-->
-<!--                <div class="modal fade" role="dialog" tabindex="-1" id="modal-2">-->
-<!--                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">-->
-<!--                        <div class="modal-content">-->
-<!--                            <div class="modal-header">-->
-<!--                                <h4 class="modal-title">Edit Task</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--                            </div>-->
-<!--                            <div class="modal-body"><input class="form-control form-control-lg my-2" type="text" placeholder="Task name" name="taskName" required=""><input class="form-control form-control-lg my-2" type="text" placeholder="Task Description" name="taskDescription" required="">-->
-<!--                                <div class="form-check my-2"><input class="form-check-input" type="checkbox" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Completed</label></div>-->
-<!--                            </div>-->
-<!--                            <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><button class="btn btn-primary" type="submit">Save</button></div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </form>-->
-            <div class="modal fade" role="dialog" tabindex="-1" id="modal-3">
-                <div class="modal-dialog" role="document">
+            <p class="mb-1">{{description}}</p><a href="#" data-bs-target="#modal-{{id}}" data-bs-toggle="modal"><small class="text-muted">Edit</small></a>
+        </div>
+        <form action="/tasks/{{id}}/edit" method="POST">
+            <div class="modal fade" role="dialog" tabindex="-1" id="modal-{{id}}">
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Confirm Deletion</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <h4 class="modal-title">Edit Task</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <p>Are you sure you want to delete this task?</p>
+                            <input class="form-control form-control-lg my-2" type="text" placeholder="Task name" name="name" value="{{name}}" required="">
+                            <input class="form-control form-control-lg my-2" type="text" placeholder="Task Description" name="details" value="{{description}}" required="">
+                            <div class="form-check my-2"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Completed</label></div>
                         </div>
-                        <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><a class="btn btn-danger ms-md-2" role="button" href="/tasks/{{id}}/delete">Yes</a></div>
+                        <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><button class="btn btn-primary" type="submit">Save</button></div>
                     </div>
                 </div>
             </div>
-            {{/each}}
-            {{/if}}
+        </form>
+        <!--            <form>-->
+        <!--                <div class="modal fade" role="dialog" tabindex="-1" id="modal-2">-->
+        <!--                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">-->
+        <!--                        <div class="modal-content">-->
+        <!--                            <div class="modal-header">-->
+        <!--                                <h4 class="modal-title">Edit Task</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+        <!--                            </div>-->
+        <!--                            <div class="modal-body"><input class="form-control form-control-lg my-2" type="text" placeholder="Task name" name="taskName" required=""><input class="form-control form-control-lg my-2" type="text" placeholder="Task Description" name="taskDescription" required="">-->
+        <!--                                <div class="form-check my-2"><input class="form-check-input" type="checkbox" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Completed</label></div>-->
+        <!--                            </div>-->
+        <!--                            <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><button class="btn btn-primary" type="submit">Save</button></div>-->
+        <!--                        </div>-->
+        <!--                    </div>-->
+        <!--                </div>-->
+        <!--            </form>-->
+        <div class="modal fade" role="dialog" tabindex="-1" id="modal-3{{id}}">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Confirm Deletion</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete this task?</p>
+                    </div>
+                    <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button><a class="btn btn-danger ms-md-2" role="button" href="/tasks/{{id}}/delete">Yes</a></div>
+                </div>
+            </div>
         </div>
+        {{/each}}
+        {{/if}}
     </div>
-    <footer class="footer" style="background: rgba(0,0,0,0.8);">
-        <div class="container"><span class="text-muted">Copyright (c) 2022 - To-Do-List</span></div>
-    </footer>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+</div>
+<footer class="footer" style="background: rgba(0,0,0,0.8);">
+    <div class="container"><span class="text-muted">Copyright (c) 2022 - To-Do-List</span></div>
+</footer>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
