--- a/src/main/resources/templates/signup.hbs
+++ b/src/main/resources/templates/signup.hbs
@@ -44,7 +44,7 @@
                         <form class="text-center" method="post" action="/register">
                             <div class="mb-3"><input class="form-control" type="text" name="name" placeholder="Name"></div>
                             <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email"></div>
-                            <div class="mb-3"><input class="form-control" type="text" name="phone" placeholder="Phone" inputmode="tel"></div>
+                            <div class="mb-3"><input class="form-control" type="phone" name="phone" placeholder="Phone" inputmode="tel"></div>
                             <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"></div>
                             <div class="mb-3"><input class="form-control" type="password" name="password2" placeholder="Confirm Password"></div>
                             <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Sign Up</button></div>
